<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/testText"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/testText"
        android:textSize="24sp"></TextView>

    <TableRow android:layout_marginRight="10dp">

        <TextView android:text="@string/size"></TextView>

        <Button
            android:id="@+id/bigger"
            android:text="@string/bigger"></Button>

        <Button
            android:id="@+id/smaller"
            android:text="@string/smaller"></Button>
    </TableRow>

    <TableRow android:layout_marginRight="3dp">

        <TextView android:text="@string/color"></TextView>

        <Button
            android:id="@+id/red"
            android:text="@string/red"></Button>

        <Button
            android:id="@+id/green"
            android:text="@string/green"></Button>

        <Button
            android:id="@+id/blue"
            android:text="@string/blue"></Button>
    </TableRow>

    <TableRow android:layout_marginRight="3dp">

        <TextView android:text="@string/style"></TextView>

        <Button
            android:id="@+id/bold"
            android:text="@string/bold"></Button>

        <Button
            android:id="@+id/italics"
            android:text="@string/italics"></Button>

        <Button
            android:id="@+id/normal"
            android:text="@string/normal"></Button>
    </TableRow>

    <TableRow>

        <com.example.androidevenhandling.callbackeventtest.MyButton
            android:id="@+id/mybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callback" />
        <Button android:id="@+id/mBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="clickEventHandler"
            android:text="直接绑定到标签"></Button>
    </TableRow>
</TableLayout>


